force-app/main/default/objects/SectionProgramConfiguration__mdt/SectionProgramConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Section Program Configuration</label>
    <pluralLabel>Section Program Configurations</pluralLabel>
</CustomObject>