force-app/main/default/objects/SectionProgramConfiguration__mdt/fields/Navigation_Flow_Page_Config__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Flow_Page_Config__c</fullName>
    <label>Navigation Flow Page Config</label>
    <referenceTo>NavFlowPageConfig__mdt</referenceTo>
    <relationshipLabel>Section Program Configurations</relationshipLabel>
    <relationshipName>Section_Program_Configurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>