force-app/main/default/objects/SectionProgramConfiguration__mdt/fields/PageInfo__c.field-meta.xml
<CustomField>
    <fullName>PageInfo__c</fullName>
    <label>Page Info</label>
    <referenceTo>PageInfo__mdt</referenceTo>
    <relationshipLabel>Section Program Configurations</relationshipLabel>
    <relationshipName>Section_Program_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>