force-app/main/default/objects/SectionProgramConfiguration__mdt/fields/SectionNameId__c.field-meta.xml
<CustomField>
    <fullName>SectionNameId__c</fullName>
    <label>Section Name/Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>