force-app/main/default/objects/SectionProgramConfiguration__mdt/fields/Target_Page_Info__c.field-meta.xml
<CustomField>
    <fullName>Target_Page_Info__c</fullName>
    <label>Target Page Info</label>
    <referenceTo>PageInfo__mdt</referenceTo>
    <relationshipLabel>Section Program Configurations (Target Page Info)</relationshipLabel>
    <relationshipName>Section_Program_Configurations1_del</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>