force-app/main/default/objects/SectionProgramConfiguration__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PageInfo__c</columns>
    <columns>SectionNameId__c</columns>
    <columns>Programs__c</columns>
    <columns>Navigation_Flow_Page_Config__c</columns>
    <columns>Target_Page_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>