force-app/main/default/objects/SectionProgramConfiguration__mdt/listViews/Temp.listView-meta.xml
<ListView>
    <fullName>Temp</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Programs__c</columns>
    <columns>SectionNameId__c</columns>
    <columns>PageInfo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Temp</label>
</ListView>